--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 TELEGRAM_BOT_TOKEN=7239382363:AAHBnfK80f8YwU79E5g1LxMAreFXfrtBsbU
-DATABASE_URL=
+DATABASE_URL=postgres://insta_reels_user:Sb11wL9MUR2ael7f4z8zWauX95kXKMwu@dpg-cppjg8dds78s73ea06i0-a.oregon-postgres.render.com/insta_reels
 WEBHOOK_URL=
-PORT=
+PORT=8443
