--- a/.env
+++ b/.env
@@ -1,7 +1,2 @@
-TELEGRAM_BOT_TOKEN=7239382363:AAHBnfK80f8YwU79E5g1LxMAreFXfrtBsbU
-    DATABASE_URL=postgres://insta_reels_user:Sb11wL9MUR2ael7f4z8zWauX95kXKMwu@dpg-cppjg8dds78s73ea06i0-a.oregon-postgres.render.com/insta_reels
-    PORT=5000 # Example port number for Flask app
-    WEBHOOK_URL=https://reels-saver.onrender.com/7239382363:AAHBnfK80f8YwU79E5g1LxMAreFXfrtBsbU
-    AUTHORIZED_USERS=[6826870863]
-    INSTAGRAM_USERNAME=xdbaeuonf
-    INSTAGRAM_PASSWORD=xdbaeuonf.com
+  IG_USERNAME=xdbaeuonf
+ IG_PASSWORD=xdbaeuonf.com
